--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
 <html lang="en">
 
 <head>
-<!--TODO: bigger navbar on landing page
-          discuss fonts
-          clean up and minimisation
-          who to make it preview nicely in facebook and twitter?
-          -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,16 +58,19 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#team">Team</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#map">Venue</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                        <a class="page-scroll" href="#ticket">Tickets</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#ticket">Tickets</a>
+                        <a class="page-scroll" href="#sponsors">Partners</a>
                     </li>
                     <li>
                         <a class="fa fa-envelope-square page-scroll" href="#foot"></a>
@@ -90,8 +88,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>Make &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a difference</h1>
+                        <h1>MAKE A DIFFERENCE</h1>
+                        <h3>Saturday 23<sup>rd</sup> May 2015</h3>
 
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -104,20 +102,9 @@
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About TEDx, x = independently organized event</h2>
-                <p>In the spirit of ideas worth spreading, TEDx is a program of
-                    local, self-organized events that bring people together to
-                    share a TED-like experience. At a TEDx event, TED Talks
-                    video and live speakers combine to spark deep discussion
-                    and connection. These local, self-organized events are
-                    branded TEDx, where x = independently organized TED event.
-                    The TED Conference provides general guidance for the TEDx
-                    program, but individual TEDx events are self-organized.
-                    (Subject to certain rules and regulations.)
-                 </p>
-                <h2>About TED</h2>
+                <h2>TED: Ideas Worth Spreading </h2>
                 <p>TED is a nonprofit organization devoted to Ideas Worth
                     Spreading. Started as a four-day conference in California 30
                     years ago, TED has grown to support its mission with
@@ -126,23 +113,138 @@
                     18 minutes or less. Many of these talks are then made
                     available, free, at <a href="http://www.ted.com">ted.com</a>
                 </p>
-                <h2>About the organizing committee</h2>
-                <p>
-                    Our faces
-                </p>
+                </br></br></br>
+                <h2>TEDx, x = Independently Organized Event</h2>
+                <p>In the spirit of ideas worth spreading, TEDx is a program of
+                    local, self-organized events that bring people together to
+                    share a TED-like experience. At a TEDx event, TED Talks
+                    video and live speakers combine to spark deep discussion
+                    and connection. The TED Conference provides general guidance for the TEDx
+                    program, but individual TEDx events are local, independent and self-organized.
+                 </p>
+                <p><iframe width="560" height="315" src="//www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allowfullscreen></iframe></p>
+                </br></br></br>
+                <h2>TEDx University of Dundee</h2>
+                <p>TEDx University Of Dundee is a student-led TEDx event, aiming at inspiring new ideas
+                and enhancing creativity amoung university students and within the general public in Dundee.
+                The upcoming event is the first TEDx organized at the <a href="http://www.dundee.ac.uk/">University of Dundee</a></p>
             </div>
         </div>
     </section>
+
+    <!-- About Team -->
+    <section id="team" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Organizing Team</h2>
+
+        <div class="row">
+            <img src="img/dianbo.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <p>From China, Dianbo Liu is a PhD candidate in Computational/physical Biology based in University of Dundee.
+                    He is interested in linking knowledge from unrelated fields and making innovative but useful inventions.</p>
+            </div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/gillian.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-9">
+                <p>Gillian Dunphy was born and raised in Glasgow but was compelled to make the lengthy journey to Dundee after being lured by its East coast charm.
+                    She is currently studying for a PhD in Immunology at the University of Dundee.
+                    She is the volunteer coordinator and part of the organising committee for TEDxUoD.</p>
+            </div>
+            <div class="col-md-3">
+
+            </div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/stefan.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <p>Stefan Tomov is a recent University of Dundeee graduate in the study of Economics and Politics.
+                    He comes from Bulgaria and is the current Deputy President of Dundee University Students' Association. </p>
+            </div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/thiago.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-9">
+                <p>Thiago Britto-Borges is a PhD student at Dundee’s Computational Biology lab, where his main job is trying to
+                    understand how certain cellular signals affect protein structure and function. Thiago likes to try to
+                    understand stuff even out of working hours, and that is why he is helping organising this TedX event: spreading
+                    knowledge is fun. </p>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/sarah.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <p>Sarah-Lena Offenburger is pursuing a PhD in Neurobiology at the College of Life Sciences in Dundee.
+                    More precisely, she is studying the design and defence of brain cells that use dopamine to
+                    regulate reward behaviours and movement. For her experiments she is working with a cute little (1 mm)
+                    worm called <em>C. elegans</em>. When Sarah is not in the lab, you will probably find her doing sports, taking
+                    pictures outside or just having a coffee with friends. She helps to organise the TEDx event in Dundee
+                    because for her it is a great way to share important insights with the public.</p>
+            </div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/fabio.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-9">
+                <p>From Portugal, F&aacute;bio Madeira is currently a student in the Wellcome Trust PhD programme in Cell and Molecular
+                    Biology in Dundee. He is currently working in a computational biology project. When he is away from the
+                    computer, he can be found at the swimming pool or most likely at the music room,
+                    where he dives into his piano improvisation.</p>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+         </br>
+        <div class="row">
+            <img src="img/darya.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <p>Darya Baranovka is the president of the Enterprise Gym, University of Dundee department which teaches students
+                    about entrepreneurship. She come from the small and pretty town of Liepaya, which is located on the Latvian
+                    coast of the Baltic Sea. She likes traveling and visiting new places. In her free time at home she enjoys cooking and drawing on silk.</p>
+            </div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/kushal.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-9">
+                <p>Originally from the island of Mauritius, Kuchal Rugjee moved to Dundee to pursue a PhD in Life Sciences,
+                    more specifically looking at treatments for Cystic Fibrosis. His role in the team is to co-ordinate the
+                    overall organisation of the TEDx event and to ensure that progress is being made.</p>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+        </br>
+        <div class="row">
+            <img src="img/sam.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <p>Sam Watkins is a University Student currently studying Computer Science at the University of Dundee.
+                    He is in his third year now and interested in Web Programming, Product Development and Entrepreneurship.</p>
+            </div>
+        </div>
+
+            </div>
+        </div>
+    </section>
+
 
     <!-- About Speakers -->
     <section id="speakers" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Speakers</h2>
-                Speakers invitation are on their way! We are also organising an
-                self nomation and we may feature you.
-                <a class="page-scroll" href="#foot">
-                    Contac us</a> for more details.
+                <p>Speakers invitations are on their way! We are also organising an
+                self nomination and we may feature you. <a class="page-scroll" href="#foot">
+                    Contact us</a> for more details.</p>
             </div>
         </div>
     </section>
@@ -152,28 +254,13 @@
     <section id="map" class="container content-section text-center">
     <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Location</h2>
+                <h2>Venue</h2>
+                <p>Lecture Theatre 3, Dalhousie Building</br>
+                   University of Dundee</br>
+                   Old Hawkhill, Dundee City DD1 5EN</p>
             </div>
         </div>
     <div id="GoogleMap"></div>
-    </section>
-    
-    <!-- Sponsors section -->
-    <section id="sponsors" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Sponsors</h2>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87" alt="Image" style="max-width:100%;"></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f" alt="Image" style="max-width:100%;"></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87" alt="Image" style="max-width:100%;"></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f" alt="Image" style="max-width:100%;"></div>
-            </div><!--.row-->
-        </div><!--.container-->
     </section>
 
     <!-- Tickets section -->
@@ -181,24 +268,46 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Tickets</h2>
+                <p>The event is open to both general public and university students and a total of one hundred tickets will be on sale.
+                    Ticket sale will be open closer to the event's day.</p>
             </div>
         </div>
-        <div>
-            A total of one hundred tickts will be on sale. The event will be
-            open to both general public and university studen
+    </section>
+    
+    <!-- Sponsors section -->
+    <section id="sponsors" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Partners</h2>
+            </div>
         </div>
+        <div class="container">
+            <div class="row">
+                  <div class="col-md-3"><a href="http://www.dundee.ac.uk/" target='_blank'><img src="img/uodundee.png" alt="Image" style="max-width:100%;"></a></div>
+                  <div class="col-md-3"><a href="http://www.dusa.co.uk" target='_blank'><img src="img/dusa.png" alt="Image" style="max-width:100%;"></a></div>
+                  <div class="col-md-3"><a href="https://enterprise-gym.com" target='_blank'><img src="img/teg.png" alt="Image" style="max-width:100%;"></a></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>
+            </div><!--.row-->
+            </br>
+            <div class="row">
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87&text=partners" alt="Image" style="max-width:100%;"></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87&text=partners" alt="Image" style="max-width:100%;"></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>
+            </div><!--.row-->
+        </div><!--.container-->
     </section>
 
 
-    <!-- Footer -->
-    <footer id="foot"> 
+    </br></br></br></br></br></br></br></br>
+    <footer id="foot">
          <ul class="list-inline banner-social-buttons text-center">
-         <a href="https://twitter.com/TEDxUoDundee" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> 
-         <span class="network-name">Twitter</span></a>
-         <a href="https://www.facebook.com/TEDxUoD" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> 
-         <span class="network-name">Facebook</span></a>
-        <a href="mailto:contact@tedxuod.co.uk" class="btn btn-default btn-lg">contact@tedxuod.co.uk</a>
-         </ul>
+          <a href="mailto:contact@tedxuod.co.uk" class="btn btn-default btn-lg">tedx@dundee.ac.uk</a>&nbsp;&nbsp;&nbsp;
+         <a href="https://twitter.com/TEDxUoDundee" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i>
+         <span class="network-name">Twitter</span></a>&nbsp;&nbsp;&nbsp;
+         <a href="https://www.facebook.com/TEDxUoD" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i>
+        <span class="network-name">Facebook</span></a>
+         </ul></br></br>
     </footer>
 
     <!-- jQuery -->
@@ -217,14 +326,14 @@
             var mapProp = {
                 center: myCenter,
                 zoom: 17,
-                scrollwheel: true,
+                scrollwheel: false,
                 draggable: true,
                 mapTypeId: google.maps.MapTypeId.ROADMAP
             };
             var map = new google.maps.Map(document.getElementById("GoogleMap"), mapProp);
 
         var marker = new google.maps.Marker({
-            position: myCenter,
+            position: myCenter
         });
 
         marker.setMap(map);
